[tool.poetry]
name = "referral-system-api"
version = "0.1.0"
description = "API для реферальной системы"
authors = ["islam <islamkazproject@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.13.3"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.12.0"
black = "^24.10.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pyhamcrest = "^2.1.0"
pytest-asyncio = "^0.24.0"


[tool.black]
line-length = 90
target-version = ['py310']

[tool.isort]
multi_line_output = 3
skip_gitignore = true

[tool.pytest.ini_options]
pythonpath=[
    ".", "src",
]
asyncio_mode="auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
